lod2repository (1.34))  lod2; urgency=low

  * create the lod2final repository

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Wed, 09 Jul 2014 12:32:37 +0200

lod2repository (1.33) ldstack-nightly; urgency=low

  * add legacy virtuoso6 distribution

 -- Karel Kremer <Karel.Kremer@tenforce.com>  Tue, 23 Oct 2013 12:31:38 +0200

lod2repository (1.32) lod2; urgency=low

  * add recommends of lod2-virtuoso-opensource

 -- Karel Kremer <Karel.Kremer@tenforce.com>  Tue, 24 Sep 2013 13:12:38 +0200

lod2repository (1.31) lod2; urgency=low

  * add Karel Kremers' public key to public keyring, added virtuoso7 specific package

 -- Karel Kremer <Karel.Kremer@tenforce.com>  Tue, 17 Sep 2013 13:56:38 +0200

lod2repository (1.30) lod2; urgency=low

  * add Petar Petrovski keys (Uni Mannheim) (now real)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Tue, 03 Sep 2013 14:42:20 +0200

lod2repository (1.29) lod2; urgency=low

  * add Petar Petrovski keys (Uni Mannheim)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Tue, 03 Sep 2013 14:38:31 +0200

lod2repository (1.28) lod2; urgency=low

  * upgrade Sebastian Tramps gnupg key

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Tue, 09 Jul 2013 22:57:23 +0200

lod2repository (1.27) lod2; urgency=low

  * upgrade Claus Stadler gnupg key

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Thu, 04 Jul 2013 17:34:55 +0200

lod2repository (1.26) lod2; urgency=low

  * add Vadim Zaslavski keys (Ontos)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Wed, 03 Jul 2013 14:51:26 +0200

lod2repository (1.25) lod2; urgency=low

  * add Bernard Buris Keys

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Thu, 23 May 2013 17:03:33 +0200

lod2repository (1.21) lod2; urgency=low

  * add mateja to the list

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Wed, 14 Nov 2012 08:56:03 +0100

lod2repository (1.19) lod2; urgency=low
