@@ -1,0 +1,7 @@
+Package: *
+Pin: release n=lod2virt7
+Pin-Priority: 900
+
+Package: *
+Pin: release n=lod2final
+Pin-Priority: 901
