@@ -1,10 +1,11 @@
-lod2repository (1.34))  lod2; urgency=low
+lod2repository (1.34) lod2; urgency=low
 
+  * Non-maintainer upload
   * create the lod2final repository
 
  -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Wed, 09 Jul 2014 12:32:37 +0200
 
-lod2repository (1.33) ldstack-nightly; urgency=low
+lod2repository (1.33) lod2; urgency=low
 
   * add legacy virtuoso6 distribution
 
